Mise en order des cartes des hôtels sur la section hebergement + correction au niveau de la navbar sur la version Mobile

--- a/style.css
+++ b/style.css
@@ -513,7 +513,8 @@ margin:0;
 }
 header{
 flex-direction: column;
-align-items: center;
+margin: 0;
+padding: 0;
 }
 form label{
 background-color: var(--main-bg-color);
@@ -557,20 +558,25 @@ height: 19px;
 width: 61.09px;    
 
 }
+.navbar{
+    width:100%;
+    justify-content: center;
+}
 .navbar ul{
 padding: 0;
 gap:1px;
 margin: 0;
+width: 100%;
 }
 .navbar li{
 text-align: center;
-width: 48vw;
+width:100%;
 }
 .navbar li a {
 display: inline-block;
 width: 100%;
 border-bottom: 3px solid var(--main-bg-color);
-padding: 20px;
+padding-bottom: 20px;
 }
 .navbar li a:hover{
 border-bottom: 3px solid var(--main-color);
